samples/addons/carrot-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: carrot-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 8087
      name: grafana-http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 8086
      name: influxdb-http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 5432
      name: pg-port
      protocol: TCP
    hosts:
    - "*"
  - port:
      number: 3306
      name: mariadb-port
      protocol: TCP
    hosts:
    - "*"
