samples/addons/carrot-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-vs
spec:
  hosts:
  - "*"
  gateways:
  - carrot-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
spec:
  hosts:
  - "*"
  gateways:
  - carrot-gateway
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-vs
spec:
  hosts:
  - "*"
  gateways:
  - carrot-gateway
  http:
  - match:
    - uri:
        prefix: /jaeger
    route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgresql-vs
spec:
  hosts:
  - "*"
  gateways:
  - carrot-gateway
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: postgresql.default.svc.cluster.local
        port:
          number: 5432
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mariadb-vs
spec:
  hosts:
  - "*"
  gateways:
  - carrot-gateway
  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: mariadb.default.svc.cluster.local
        port:
          number: 3306

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: influxdb-vs
spec:
  hosts:
  - "*"
  gateways:
  - carrot-gateway
  http:
  - match:
    - port: 8086
    route:
    - destination:
        host: influxdb.default.svc.cluster.local
        port:
          number: 8086
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
  - "*"
  gateways:
  - carrot-gateway
  http:
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
